--- a/frameworks/themes/JewelTheme/src/main/sass/components-primary/_button.sass
+++ b/frameworks/themes/JewelTheme/src/main/sass/components-primary/_button.sass
@@ -44,6 +44,8 @@ $button-border-radius: 3px
 			duration: $transition-duration
 			timing-function: $transition-timing
 	
+	// -- BUTTON LABEL
+	white-space: nowrap
 	font:
 		family: $font-stack 
 		size: $font-size
